//? ======================================= ITEM SCHEMA ======================================= ?//

model InventoryItem {
    id          String        @id @default(cuid())
    name        String        @unique
    description String?
    picture     Bytes?
    category    item_category @default(Other)
    createdAt   DateTime      @default(now())
    updatedAt   DateTime      @updatedAt

    // Relations
    item_stacks ItemStack[]

    @@map("inventory_items")
}

//? ====================================== STACKS SCHEMA ====================================== ?//
model ItemStack {
    id         String      @id @default(cuid())
    itemId     String
    quantity   Int         @default(1)
    status     item_status @default(Available)
    date_limit Int? // Number of days the item can be borrowed/distributed (hold by user)
    createdAt  DateTime    @default(now())
    updatedAt  DateTime    @updatedAt

    // Relations
    item             InventoryItem     @relation(fields: [itemId], references: [id])
    itemTransactions ItemTransaction[]

    @@map("item_stacks")
}

//? ==================================== ITEM TRANSACTIONS ==================================== ?//

model ItemTransaction {
    id          String             @id @default(cuid())
    itemStackId String
    accountId   String
    adminId     String? // Admin who approved/rejected/responded to the transaction
    quantity    Int                @default(1)
    status      transaction_status @default(Pending)
    pickupDate  DateTime
    returnDate  DateTime?
    createdAt   DateTime           @default(now())
    updatedAt   DateTime           @updatedAt

    // Relations
    itemStack ItemStack @relation(fields: [itemStackId], references: [id])
    account   Account   @relation(fields: [accountId], references: [id])
    admin     Account?  @relation("AdminTransactions", fields: [adminId], references: [id])

    @@map("item_transactions")
}

enum transaction_status {
    Pending
    Approved
    Rejected
    Returned
    No_Return
    late_return
    No_Pickup
    Cancelled
}

//? ========================================== ENUMS ========================================== ?//

enum item_status {
    Available
    Unavailable
    Damaged
    EIC
    Distributed
}

enum item_category {
    Farming_Equipment
    Harvesting_Tools
    Irrigation_Systems
    Storage_Equipment
    Processing_Equipment
    Safety_Gear
    Pest_Control
    Livestock_Equipment
    Measuring_Tools
    Fisheries
    Machinery
    Other
}
