%%{init: {
  'theme': 'base',
  'themeVariables': {
    'primaryColor': '#ffffff',
    'primaryTextColor': '#000000',
    'primaryBorderColor': '#000000',
    'lineColor': '#000000',
    'secondaryColor': '#f8f8f8',
    'tertiaryColor': '#ffffff',
    'background': '#ffffff',
    'mainBkg': '#ffffff',
    'secondBkg': '#f8f8f8',
    'tertiaryTextColor': '#000000'
  }
}}%%
erDiagram
    InventoryItem {
        string id PK
        string name UK
        string description
        bytes picture
        string category
        datetime createdAt
        datetime updatedAt
    }

    ItemStack {
        string id PK
        string itemId FK
        int quantity
        string status
        int date_limit
        datetime createdAt
        datetime updatedAt
    }

    ItemTransaction {
        string id PK
        string itemStackId FK
        string accountId FK
        string adminId FK
        int quantity
        string status
        datetime pickupDate
        datetime returnDate
        string requestNote
        datetime createdAt
        datetime updatedAt
    }

    InventoryItem ||--o{ ItemStack : "has_stacks"
    ItemTransaction ||--o{ ItemStack : "generates"
